--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
         font-size: 1.2em;
         font-weight: bold;
     }
-    
+    #dialog {
+        width: 250px;
+        margin: auto;
+        margin-top: 40vh;
+        padding: 30px 20px;
+        text-align: center;
+        border: 1px solid #aaa;
+        box-shadow: 2px 2px 4px #888;
+    }
 </style>
 </head>
 
@@ -53,7 +61,10 @@
 
 <div id="panel"></div>
 
-<div id="result">経過秒数: </div>
-
+<div id="result">経過秒数:
+    <br>
+    試行回数:
+    <br>
+    残りペア数: </div>
 </body>
 </html>
